Fix alignment of the search button in the site header

--- a/common/common.scss
+++ b/common/common.scss
@@ -330,8 +330,8 @@ tr {
   }
 }
 
-.btn:not(#create-topic):not(.select-kit-header):not(.btn-flat):not(.btn-icon):not(.emoji),
-button:not(#create-topic):not(.select-kit-header):not(.btn-flat):not(.btn-icon):not(.emoji):not(.clear-filter):not(.pika-button):not(.pika-prev):not(.pika-next) {
+.btn:not(#create-topic):not(.select-kit-header):not(.btn-flat):not(.btn-icon):not(.emoji):not(.jump-top):not(.jump-bottom),
+button:not(#create-topic):not(.select-kit-header):not(.btn-flat):not(.btn-icon):not(.emoji):not(.clear-filter):not(.pika-button):not(.pika-prev):not(.pika-next):not(.jump-top):not(.jump-bottom) {
   border-radius: 25px !important;
   background-color: #2a7ab0 !important;
   font-size: 16px !important;
@@ -343,7 +343,7 @@ button:not(#create-topic):not(.select-kit-header):not(.btn-flat):not(.btn-icon):
   color: #ffffff !important;
   padding: 10px 24px !important;
   text-align: center;
-  display: flex;
+  // display: flex;
   flex-wrap: nowrap;
   align-items: center;
 
@@ -665,8 +665,9 @@ button:not(#create-topic):not(.select-kit-header):not(.btn-flat):not(.btn-icon):
     position: unset !important;
 
     @media only screen and (max-width: 767px) {
-      left: 0;
-      width: 100%;
+      // left: 0;
+      // width: 90%;
+      margin-left: 32px !important;
     }
   }
 
